--- a/svc/index.html
+++ b/svc/index.html
@@ -30,7 +30,7 @@
 	<section class="main-content" style="padding: 50px 150px;">
 	<h1 id="title">R2-SVC: TOWARDS REAL-WORLD ROBUST AND EXPRESSIVE ZERO-SHOT SINGING VOICE CONVERSION</h1>
 
-	<p style="text-align: center;">A work submitted to ASRU 2025</p>
+	<p style="text-align: center;">A work submitted to ICASSP 2026</p>
 
 	<!--<p style="text-align: center;">Xxxxx Xxx, Xxxxx Xxx, Xxxxx Xxx, Xxxxx Xxx, Xxxxx Xxx, Xxxxx Xxx</p>
 		
