--- a/svc/index.html
+++ b/svc/index.html
@@ -255,8 +255,8 @@
 		</thead>
 		<tbody>
 		<tr>
-			<td rowspan="8">Song 1</td>
-			<td rowspan="4">Singing prompt</td>
+			<td rowspan="8" style="width: 10%;">Song 1</td>
+			<td rowspan="4" style="width: 10%;">Singing prompt</td>
 			<td><audio src="audios/sys1_001.mp3" controls="" preload=""></audio></td>
 			<td><audio src="audios/sys2_001.mp3" controls="" preload=""></audio></td>
 			<td><audio src="audios/ref1_001.mp3" controls="" preload=""></audio></td>
