--- a/svc/index.html
+++ b/svc/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Audio Synthesis Demo - Research Paper</title>
+    <title>Demo page of R2-SVC</title>
     <link rel="stylesheet" href="demo.css" />
     <link
       href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600;700&display=swap"
@@ -42,8 +42,8 @@
           <li><a href="#abstract">Abstract</a></li>
           <li><a href="#methodology">Methodology</a></li>
           <li><a href="#samples">Audio Samples</a></li>
-          <li><a href="#comparisons">Comparisons</a></li>
-          <li><a href="#results">Results</a></li>
+          <!-- <li><a href="#comparisons">Comparisons</a></li> -->
+          <!-- <li><a href="#results">Results</a></li> -->
         </ul>
       </div>
     </nav>
@@ -114,11 +114,11 @@
         </section>
 
         <!-- Audio Samples Section -->
-        <section id="samples" class="section">
-          <h2 class="section-title">Audio Samples</h2>
+        <!-- <section id="samples" class="section">
+          <h2 class="section-title">Audio Samples</h2> -->
 
-          <!-- Sample Category 1 -->
-          <div class="sample-category">
+        <!-- Sample Category 1 -->
+        <!-- <div class="sample-category">
             <h3 class="category-title">
               <i class="fas fa-music"></i>
               Generated Audio Samples
@@ -167,7 +167,7 @@
               </div>
             </div>
           </div>
-        </section>
+        </section> -->
 
         <!-- Comparisons Section -->
         <section id="comparisons" class="section">
@@ -278,7 +278,7 @@
         <div class="footer-content">
           <div class="footer-section">
             <h4>Paper Information</h4>
-            <p>Published at Conference/Journal Name 2024</p>
+            <p>Submitted to ICASSP 2026</p>
             <div class="links">
               <a href="#paper" class="footer-link">
                 <i class="fas fa-file-pdf"></i> Paper PDF
