--- a/svc/index.html
+++ b/svc/index.html
@@ -23,15 +23,6 @@
           VOICE CONVERSION
         </h1>
         <p class="subtitle">A work submitted to ICASSP 2026</p>
-        <!-- <div class="authors">
-          <span class="author">Author Name<sup>1</sup></span>
-          <span class="author">Co-Author Name<sup>2</sup></span>
-          <span class="author">Another Author<sup>1</sup></span>
-        </div> -->
-        <!-- <div class="affiliations">
-          <div class="affiliation"><sup>1</sup>University/Institution Name</div>
-          <div class="affiliation"><sup>2</sup>Second Institution Name</div>
-        </div> -->
       </div>
     </header>
 
@@ -42,8 +33,6 @@
           <li><a href="#abstract">Abstract</a></li>
           <li><a href="#methodology">Methodology</a></li>
           <li><a href="#samples">Audio Samples</a></li>
-          <!-- <li><a href="#comparisons">Comparisons</a></li> -->
-          <!-- <li><a href="#results">Results</a></li> -->
         </ul>
       </div>
     </nav>
@@ -112,62 +101,6 @@
             </div>
           </div>
         </section>
-
-        <!-- Audio Samples Section -->
-        <!-- <section id="samples" class="section">
-          <h2 class="section-title">Audio Samples</h2> -->
-
-        <!-- Sample Category 1 -->
-        <!-- <div class="sample-category">
-            <h3 class="category-title">
-              <i class="fas fa-music"></i>
-              Generated Audio Samples
-            </h3>
-            <div class="audio-grid">
-              <div class="audio-item">
-                <div class="audio-header">
-                  <h4>Sample 1</h4>
-                  <span class="audio-label">High Quality</span>
-                </div>
-                <audio controls class="audio-player">
-                  <source src="path/to/audio1.wav" type="audio/wav" />
-                  Your browser does not support the audio element.
-                </audio>
-                <p class="audio-description">
-                  Description of the audio sample and its characteristics.
-                </p>
-              </div>
-
-              <div class="audio-item">
-                <div class="audio-header">
-                  <h4>Sample 2</h4>
-                  <span class="audio-label">Natural Voice</span>
-                </div>
-                <audio controls class="audio-player">
-                  <source src="path/to/audio2.wav" type="audio/wav" />
-                  Your browser does not support the audio element.
-                </audio>
-                <p class="audio-description">
-                  Description of the audio sample and its characteristics.
-                </p>
-              </div>
-
-              <div class="audio-item">
-                <div class="audio-header">
-                  <h4>Sample 3</h4>
-                  <span class="audio-label">Diverse Content</span>
-                </div>
-                <audio controls class="audio-player">
-                  <source src="path/to/audio3.wav" type="audio/wav" />
-                  Your browser does not support the audio element.
-                </audio>
-                <p class="audio-description">
-                  Description of the audio sample and its characteristics.
-                </p>
-              </div>
-            </div>
-          </div>
-        </section> -->
 
         <!-- Comparisons Section -->
         <section id="comparisons" class="section">
@@ -244,31 +177,6 @@
             </div>
           </div>
         </section>
-
-        <!-- Results Section -->
-        <!-- <section id="results" class="section">
-          <h2 class="section-title">Key Findings</h2>
-          <div class="content-box">
-            <div class="results-grid">
-              <div class="result-item">
-                <div class="result-number">95%</div>
-                <div class="result-label">Quality Improvement</div>
-              </div>
-              <div class="result-item">
-                <div class="result-number">3.2x</div>
-                <div class="result-label">Faster Generation</div>
-              </div>
-              <div class="result-item">
-                <div class="result-number">0.85</div>
-                <div class="result-label">MOS Score</div>
-              </div>
-              <div class="result-item">
-                <div class="result-number">12</div>
-                <div class="result-label">Languages Supported</div>
-              </div>
-            </div>
-          </div>
-        </section> -->
       </div>
     </main>
 
@@ -288,7 +196,7 @@
               </a>
             </div>
           </div>
-          <div class="footer-section">
+          <!-- <div class="footer-section">
             <h4>Citation</h4>
             <div class="citation-box">
               <code>
@@ -300,11 +208,11 @@
                 }
               </code>
             </div>
-          </div>
+          </div> -->
         </div>
-        <div class="footer-bottom">
+        <!-- <div class="footer-bottom">
           <p>&copy; 2024 Research Institution. All rights reserved.</p>
-        </div>
+        </div> -->
       </div>
     </footer>
 
