--- a/svc/index.html
+++ b/svc/index.html
@@ -3,22 +3,23 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>R2-SVC Demo</title>
+    <title>REF-VC Demo</title>
     <link rel="stylesheet" href="demo.css" />
   </head>
   <body>
-    <div class="container">
-      <header>
+    <div class="gradient-header">
+      <div class="container">
         <h1>
           R2-SVC: Towards Real-World Robust and Expressive Zero-Shot Singing
           Voice Conversion
         </h1>
-        <p>Submitted to ICASSP 2026</p>
-      </header>
-
+        <p>A work submitted to ASRU 2025</p>
+      </div>
+    </div>
+    <div class="container">
       <main>
         <section id="abstract">
-          <h2>Abstract</h2>
+          <h2>1. Abstract</h2>
           <p>
             In real-world singing voice conversion (SVC) applications,
             environmental noise and the demand for expressive output pose
