--- a/svc/index.html
+++ b/svc/index.html
@@ -13,7 +13,7 @@
           R2-SVC: Towards Real-World Robust and Expressive Zero-Shot Singing
           Voice Conversion
         </h1>
-        <p>A work submitted to ASRU 2025</p>
+        <p>A work submitted to ICASSP 2026</p>
       </div>
     </div>
     <div class="container">
