--- a/svc/index.html
+++ b/svc/index.html
@@ -62,6 +62,9 @@
             <div class="timbre-row">
               <div class="timbre-label">
                 <span>timbre 1 wav</span>
+                <audio controls>
+                  <source src="path/to/timbre1_reference.wav" type="audio/wav" />
+                </audio>
               </div>
               <div class="vocal-samples">
                 <div class="vocal-item">
@@ -185,25 +188,88 @@
             <div class="timbre-row">
               <div class="timbre-label">
                 <span>timbre 2 wav</span>
+                <audio controls>
+                  <source src="path/to/timbre2_reference.wav" type="audio/wav" />
+                </audio>
               </div>
               <div class="vocal-samples">
                 <div class="vocal-item">
-                  <span>...</span>
+                  <span>vocal1</span>
+                  <audio controls>
+                    <source src="path/to/original_timbre2_vocal1.wav" type="audio/wav" />
+                  </audio>
+                </div>
+                <div class="vocal-item">
+                  <span>vocal2</span>
+                  <audio controls>
+                    <source src="path/to/original_timbre2_vocal2.wav" type="audio/wav" />
+                  </audio>
+                </div>
+                <div class="vocal-item">
+                  <span>vocal3</span>
+                  <audio controls>
+                    <source src="path/to/original_timbre2_vocal3.wav" type="audio/wav" />
+                  </audio>
                 </div>
               </div>
               <div class="vocal-samples">
                 <div class="vocal-item">
-                  <span>...</span>
+                  <span>vocal1</span>
+                  <audio controls>
+                    <source src="path/to/ours_timbre2_vocal1.wav" type="audio/wav" />
+                  </audio>
+                </div>
+                <div class="vocal-item">
+                  <span>vocal2</span>
+                  <audio controls>
+                    <source src="path/to/ours_timbre2_vocal2.wav" type="audio/wav" />
+                  </audio>
+                </div>
+                <div class="vocal-item">
+                  <span>vocal3</span>
+                  <audio controls>
+                    <source src="path/to/ours_timbre2_vocal3.wav" type="audio/wav" />
+                  </audio>
                 </div>
               </div>
               <div class="vocal-samples">
                 <div class="vocal-item">
-                  <span>...</span>
+                  <span>vocal1</span>
+                  <audio controls>
+                    <source src="path/to/seedvc_timbre2_vocal1.wav" type="audio/wav" />
+                  </audio>
+                </div>
+                <div class="vocal-item">
+                  <span>vocal2</span>
+                  <audio controls>
+                    <source src="path/to/seedvc_timbre2_vocal2.wav" type="audio/wav" />
+                  </audio>
+                </div>
+                <div class="vocal-item">
+                  <span>vocal3</span>
+                  <audio controls>
+                    <source src="path/to/seedvc_timbre2_vocal3.wav" type="audio/wav" />
+                  </audio>
                 </div>
               </div>
               <div class="vocal-samples">
                 <div class="vocal-item">
-                  <span>...</span>
+                  <span>vocal1</span>
+                  <audio controls>
+                    <source src="path/to/freevc_timbre2_vocal1.wav" type="audio/wav" />
+                  </audio>
+                </div>
+                <div class="vocal-item">
+                  <span>vocal2</span>
+                  <audio controls>
+                    <source src="path/to/freevc_timbre2_vocal2.wav" type="audio/wav" />
+                  </audio>
+                </div>
+                <div class="vocal-item">
+                  <span>vocal3</span>
+                  <audio controls>
+                    <source src="path/to/freevc_timbre2_vocal3.wav" type="audio/wav" />
+                  </audio>
                 </div>
               </div>
             </div>
@@ -212,25 +278,88 @@
             <div class="timbre-row">
               <div class="timbre-label">
                 <span>timbre 3 wav</span>
+                <audio controls>
+                  <source src="path/to/timbre3_reference.wav" type="audio/wav" />
+                </audio>
               </div>
               <div class="vocal-samples">
                 <div class="vocal-item">
-                  <span>...</span>
+                  <span>vocal1</span>
+                  <audio controls>
+                    <source src="path/to/original_timbre3_vocal1.wav" type="audio/wav" />
+                  </audio>
+                </div>
+                <div class="vocal-item">
+                  <span>vocal2</span>
+                  <audio controls>
+                    <source src="path/to/original_timbre3_vocal2.wav" type="audio/wav" />
+                  </audio>
+                </div>
+                <div class="vocal-item">
+                  <span>vocal3</span>
+                  <audio controls>
+                    <source src="path/to/original_timbre3_vocal3.wav" type="audio/wav" />
+                  </audio>
                 </div>
               </div>
               <div class="vocal-samples">
                 <div class="vocal-item">
-                  <span>...</span>
+                  <span>vocal1</span>
+                  <audio controls>
+                    <source src="path/to/ours_timbre3_vocal1.wav" type="audio/wav" />
+                  </audio>
+                </div>
+                <div class="vocal-item">
+                  <span>vocal2</span>
+                  <audio controls>
+                    <source src="path/to/ours_timbre3_vocal2.wav" type="audio/wav" />
+                  </audio>
+                </div>
+                <div class="vocal-item">
+                  <span>vocal3</span>
+                  <audio controls>
+                    <source src="path/to/ours_timbre3_vocal3.wav" type="audio/wav" />
+                  </audio>
                 </div>
               </div>
               <div class="vocal-samples">
                 <div class="vocal-item">
-                  <span>...</span>
+                  <span>vocal1</span>
+                  <audio controls>
+                    <source src="path/to/seedvc_timbre3_vocal1.wav" type="audio/wav" />
+                  </audio>
+                </div>
+                <div class="vocal-item">
+                  <span>vocal2</span>
+                  <audio controls>
+                    <source src="path/to/seedvc_timbre3_vocal2.wav" type="audio/wav" />
+                  </audio>
+                </div>
+                <div class="vocal-item">
+                  <span>vocal3</span>
+                  <audio controls>
+                    <source src="path/to/seedvc_timbre3_vocal3.wav" type="audio/wav" />
+                  </audio>
                 </div>
               </div>
               <div class="vocal-samples">
                 <div class="vocal-item">
-                  <span>...</span>
+                  <span>vocal1</span>
+                  <audio controls>
+                    <source src="path/to/freevc_timbre3_vocal1.wav" type="audio/wav" />
+                  </audio>
+                </div>
+                <div class="vocal-item">
+                  <span>vocal2</span>
+                  <audio controls>
+                    <source src="path/to/freevc_timbre3_vocal2.wav" type="audio/wav" />
+                  </audio>
+                </div>
+                <div class="vocal-item">
+                  <span>vocal3</span>
+                  <audio controls>
+                    <source src="path/to/freevc_timbre3_vocal3.wav" type="audio/wav" />
+                  </audio>
                 </div>
               </div>
             </div>
