--- a/svc/index.html
+++ b/svc/index.html
@@ -45,8 +45,24 @@
           </p>
         </section>
 
+        <section id="model-overview">
+          <h2>2. Overview of R2-SVC</h2>
+          <div class="model-diagram">
+            <img
+              src="images/r2svc_architecture.png"
+              alt="R2-SVC Architecture Diagram"
+              class="architecture-img"
+            />
+            <p class="diagram-caption">
+              Figure 1: Overview of the R2-SVC framework showing the main
+              components including feature extraction, robustness enhancement,
+              and the Neural Source-Filter model integration.
+            </p>
+          </div>
+        </section>
+
         <section id="audio-samples">
-          <h2>2. Audio Samples (Normal)</h2>
+          <h2>3. Audio Samples (Normal-Set)</h2>
 
           <div class="comparison-table">
             <!-- Header Row -->
@@ -448,7 +464,7 @@
         </section>
 
         <section id="audio-samples-hard">
-          <h2>3. Audio Samples (Hard)</h2>
+          <h2>3. Audio Samples (Hard-Set)</h2>
 
           <div class="comparison-table">
             <!-- Header Row -->
