--- a/svc/index.html
+++ b/svc/index.html
@@ -49,7 +49,7 @@
           <h2>2. Overview of R2-SVC</h2>
           <div class="model-diagram">
             <img
-              src="images/r2svc_architecture.png"
+              src="svc/imgs/r2svc_arc.png"
               alt="R2-SVC Architecture Diagram"
               class="architecture-img"
             />
@@ -464,7 +464,7 @@
         </section>
 
         <section id="audio-samples-hard">
-          <h2>3. Audio Samples (Hard-Set)</h2>
+          <h2>4. Audio Samples (Hard-Set)</h2>
 
           <div class="comparison-table">
             <!-- Header Row -->
